<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OcrInfoActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:scaleType="centerInside"
        app:layout_constraintDimensionRatio="100:63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/page_bg_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <LinearLayout
                android:id="@+id/idFrontLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/idNoInfo"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/id_no"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/app_dark_gray"/>

                    <TextView
                        android:id="@+id/idNoTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/text_gray"
                        android:gravity="end"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/text_gray"/>

                <LinearLayout
                    android:id="@+id/nameInfo"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/app_dark_gray"/>

                    <TextView
                        android:id="@+id/nameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/text_gray"
                        android:gravity="end"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/page_bg_color"/>

                <LinearLayout
                    android:id="@+id/sexInfo"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/sex"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/app_dark_gray"/>

                    <TextView
                        android:id="@+id/sexTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/text_gray"
                        android:gravity="end"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/page_bg_color"/>

                <LinearLayout
                    android:id="@+id/nationInfo"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/nation"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/app_dark_gray"/>

                    <TextView
                        android:id="@+id/nationTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/text_gray"
                        android:gravity="end"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/page_bg_color"/>

                <LinearLayout
                    android:id="@+id/birthdayInfo"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/birthday"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/app_dark_gray"/>

                    <TextView
                        android:id="@+id/birthdayTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/text_gray"
                        android:gravity="end"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/page_bg_color"/>

                <LinearLayout
                    android:id="@+id/addressInfo"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/live_address"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/app_dark_gray"/>

                    <TextView
                        android:id="@+id/addressTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/text_gray"
                        android:gravity="end"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/page_bg_color"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/idBackLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/issuerInfo"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/id_issuer"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/app_dark_gray"/>

                    <TextView
                        android:id="@+id/idIssuerTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/text_gray"
                        android:gravity="end"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/page_bg_color"/>

                <LinearLayout
                    android:id="@+id/idDateInfo"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/id_valid_date"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/app_dark_gray"/>

                    <TextView
                        android:id="@+id/idDateTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/text_gray"
                        android:gravity="end"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/page_bg_color"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/app_blue_dark"
        android:text="@string/next"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>